--- a/src/main/index.css
+++ b/src/main/index.css
@@ -12,7 +12,7 @@
 }
 
 #body {
-  height: 100%;
+  height: 100vh;
   /* background-color: blue; */
   width: 1024px;
   /* 부모 기준으로 가운데정렬 > #body 부분만 가운데 정렬됨 */
@@ -98,4 +98,9 @@
 
 .product-avatar {
   width: 24px;
+}
+
+.product-link {
+  color: inherit;
+  text-decoration: none;
 }
