--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,51 @@
   }
 } */
 
+* {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+}
+
 html,
 body,
 #root,
 #root > div {
   height: 100%;
+}
+
+#header {
+  height: 64px;
+  /* background-color: black; */
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid gray;
+}
+
+#header-area {
+  width: 1024px;
+  height: 100%;
+  /* background-color: orange; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#header-area img {
+  width: 128px;
+  height: 36px;
+}
+
+#body {
+  height: 100vh;
+  /* background-color: blue; */
+  width: 1024px;
+  /* 부모 기준으로 가운데정렬 > #body 부분만 가운데 정렬됨 */
+  margin: 0 auto;
+  padding-bottom: 24px;
+}
+
+#footer {
+  height: 200px;
+  background-color: rgb(230, 230, 230);
 }
