--- a/src/App.css
+++ b/src/App.css
@@ -73,9 +73,10 @@ body,
 }
 
 #body {
-  height: 100vh;
+  min-height: 100vh;
   /* background-color: blue; */
-  width: 1024px;
+  max-width: 1024px;
+  width: 100%;
   /* 부모 기준으로 가운데정렬 > #body 부분만 가운데 정렬됨 */
   margin: 0 auto;
   padding-bottom: 24px;
@@ -84,4 +85,19 @@ body,
 #footer {
   height: 200px;
   background-color: rgb(230, 230, 230);
+}
+
+@media screen and (max-width: 400px) {
+  .product-card {
+    width: 160px !important;
+  }
+  #header {
+    padding: 0 8px;
+  }
+  #body {
+    padding: 0 8px;
+  }
+  .ant-carousel {
+    margin: 0 -8px;
+  }
 }
