--- a/src/product/index.css
+++ b/src/product/index.css
@@ -1,12 +1,14 @@
 #image-box {
-  height: 300px;
+  max-height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 #image-box img {
-  height: 100%;
+  width: 100%;
+  max-height: 300px;
+  object-fit: contain;
 }
 
 #profile-box {
@@ -44,9 +46,15 @@
 
 #description {
   margin-top: 16px;
+  font-size: 16px;
 }
 
 #createdAt {
   font-size: 12px;
   color: rgb(204, 204, 204);
+}
+
+#purchase-button {
+  margin-top: 8px;
+  margin-bottom: 16px;
 }
